<resources>
    <string name="app_name">BMI Calculator</string>

    <string name="mass_metric_unit">kg</string>
    <string name="height_metric_unit">cm</string>
    <string name="mass_imperial_unit">st</string>
    <string name="height_imperial_unit">in</string>

    <string name="wrong_height_err">Wrong height</string>
    <string name="wrong_mass_err">Wrong mass</string>

    <string name="metric_units_rb_label">Metric units</string>
    <string name="imperial_units_rb_label">Imperial units</string>
...
